--- a/Projeto4/nbproject/project.properties
+++ b/Projeto4/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Projeto4
-main.class=projeto4.Projeto4
+main.class=projeto4.Chat
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
